Keep alive gateway WS connections (#74)
* Connection heartbeat + tests refactoring

* [WIP] Refactoring + tests

* Refactoring + tests + finish heartbeat

* Update REST Api docs

* Fix tests

* Fix tests

* Fix tests